[project]
name = "livelist"
version = "1.1.0"
description = "Collaborative playlist management — server and client"
requires-python = ">=3.9"

[project.optional-dependencies]
server = [
    "sqlalchemy",
    "flask",
    "flask_socketio",
    "flask_sqlalchemy",
    "pyyaml",
    "python-dotenv",
]
client = [
    "python-socketio[client]",
    "python-socketio[asyncio_client]",
]
all = ["livelist[server,client]"]

[tool.setuptools]
packages = [
    "livelist",
    "livelist.client",
    "livelist.config",
    "livelist.l10n",
    "livelist.locales",
    "livelist.models",
    "livelist.routes",
]

[tool.setuptools.package-data]
# Ship the committed (non-fetched) frontend assets so non-editable installs
# have them. Third-party libs stay out (gitignored) and are fetched via
# `flask fetch-static` (optionally into $LIVELIST_STATIC_DIR).
"livelist" = [
    "templates/*.html",
    "static/favicon.ico",
    "static/css/bs-custom.css",
    "static/css/custom.css",
    "static/js/app.js",
    "static/js/dnd.js",
    "static/js/fullscreen.js",
]
